--- a/index.html
+++ b/index.html
@@ -162,27 +162,27 @@
             <div class="box-container">
 
                 <div class="box">
-                    <img src="../img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
+                    <img src="./img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
                 </div>
 
                 <div class="box">
-                    <img src="../img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
+                    <img src="./img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
                 </div>
 
                 <div class="box">
-                    <img src="../img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
+                    <img src="./img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
                 </div>
 
                 <div class="box">
-                    <img src="../img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
+                    <img src="./img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
                 </div>
 
                 <div class="box">
-                    <img src="../img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
+                    <img src="./img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
                 </div>
 
                 <div class="box">
-                    <img src="../img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
+                    <img src="./img/avatar-nguoi-giau-mat-bi-an.jpg" alt="">
                 </div>
 
             </div>
